# Copyright (C) 2005-2008 MaNGOS <http://www.mangosproject.org/>
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA

## Process this file with automake to produce Makefile.in

## Sub-directories to parse

## Change installation location
#  datadir = mangos/sql/updates
pkgdatadir = $(datadir)/mangos/sql/updates

## Files to be installed
#  Install basic SQL files to datadir
pkgdata_DATA = \
	4846_characters.sql \
	4846_mangos_creature_template.sql \
	4846_mangos_item_template.sql \
	4846_mangos_npc_option.sql \
	4875_mangos_quest_template.sql \
	4890_mangos_item_template.sql \
	4895_mangos_command.sql \
	4896_characters_mail.sql \
	4898_mangos_playercreateinfo_item.sql \
	4904_mangos_item_template.sql \
	4908_mangos_spell_proc_event.sql \
	4916_mangos_spell_affect.sql \
	4921_mangos_gameobject.sql \
	4926_mangos_spell_proc_event.sql \
	4937_mangos_spell_affect.sql \
	4937_mangos_spell_proc_event.sql \
	4948_mangos_spell_affect.sql \
	4951_mangos_spell_affect.sql \
	4952_mangos_spell_proc_event.sql \
	4971_characters_character_social.sql \
	4975_mangos_spell_affect.sql \
	4975_mangos_spell_proc_event.sql \
	4984_mangos_spell_proc_event.sql \
	5019_mangos_spell_proc_event.sql \
	5030_mangos_item_template.sql \
	5036_mangos_spell_affect.sql \
	5039_mangos_spell_proc_event.sql \
	5064_mangos_spell_proc_event.sql \
	5070_mangos_spell_proc_event.sql \
	5072_mangos_spell_proc_event.sql \
	5075_mangos_spell_proc_event.sql \
	5084_mangos_command.sql \
	5085_mangos_spell_affect.sql \
	5087_mangos_spell_affect.sql \
	5088_mangos_spell_proc_event.sql \
	5092_mangos_item_template.sql \
	5097_mangos_skill_extra_item_template.sql \
	5106_mangos_spell_chain.sql \
	5108_characters.sql \
	5119_mangos_quest_template.sql \
	5120_mangos_spell_chain.sql \
	5121_mangos_spell_affect.sql \
	5123_mangos_spell_proc_event.sql \
	5128_mangos_spell_proc_event.sql \
	5130_mangos_spell_proc_event.sql \
	5146_mangos_spell_proc_event.sql \
	5147_mangos_spell_learn_spell.sql \
	5156_mangos_spell_affect.sql \
	5156_mangos_spell_proc_event.sql \
	5158_mangos_spell_affect.sql \
	5159_characters_guild_bank_eventlog.sql \
	5159_characters_guild_bank_item.sql \
	5159_characters_guild_bank_right.sql \
	5159_characters_guild_bank_tab.sql \
	5159_characters_guild_memeber.sql \
	5160_mangos_command.sql \
	5163_mangos_spell_affect.sql \
	5163_mangos_spell_proc_event.sql \
	5164_mangos_creature_movement.sql \
	5165_mangos_mangos_string.sql \
	5166_mangos_mangos_string.sql \
	5172_mangos_mangos_string.sql \
	5180_mangos_spell_affect.sql \
	5181_mangos_mangos_string.sql \
	5185_mangos_spell_proc_event.sql \
	5191_mangos_spell_threat.sql \
	5197_mangos_spell_affect.sql \
	5199_characters_guild_bank_eventlog.sql \
	5201_mangos_spell_affect.sql \
	5212_mangos_command.sql \
	5212_mangos_mangos_string.sql \
	5217_characters_character.sql \
	5228_mangos_gameobject_scripts.sql \
	5233_mangos_event_scripts.sql \
	5234_mangos_spell_proc_event.sql \
	5238_mangos_spell_proc_event.sql \
	5242_mangos_instance_template.sql \
	5243_mangos_spell_affect.sql \
	5249_mangos_spell_learn_skill.sql \
	5254_mangos_spell_affect.sql \
	5254_mangos_spell_proc_event.sql \
	5258_characters_character.sql \
	5265_mangos_spell_proc_event.sql \
	5269_mangos_uptime.sql \
	5270_mangos_gameobject_scripts.sql \
	5272_mangos_mangos_string.sql \
	5286_characters_character_pet.sql \
	5292_mangos_spell_proc_event.sql \
	5295_mangos_creature_template.sql \
	5297_characters.sql \
	5297_mangos.sql \
	5297_realmd_account.sql \
	5302_mangos_player_levelstats.sql \
	5311_mangos_spell_affect.sql \
	5326_mangos_spell_affect.sql \
	5335_mangos_mangos_string.sql \
	5343_mangos_spell_proc_event.sql \
	5347_mangos_spell_affect.sql \
	5350_mangos_spell_affect.sql \
	5351_mangos_spell_proc_event.sql \
	5363_mangos_creature_template.sql \
	5366_mangos_spell_proc_event.sql \
	5367_mangos_spell_affect.sql \
	5370_mangos_spell_affect.sql \
	5374_mangos_spell_affect.sql \
	5378_mangos_spell_proc_event.sql \
	5379_mangos_spell_proc_event.sql \
	5402_mangos_spell_proc_event.sql \
	5408_characters_mail_items.sql \
	5411_mangos_spell_affect.sql \
	5419_mangos_spell_affect.sql \
	5420_characters_mail_items.sql \
	5422_mangos_spell_proc_event.sql \
	5441_characters_petition_petition_sign.sql \
	5443_mangos_item_template.sql \
	5445_mangos_spell_affect.sql \
	5446_mangos_creature_template.sql \
	5451_characters_petition_petition_sign.sql \
	5457_realmd_account.sql \
	5460_mangos_spell_proc_event.sql \
	5462_mangos_spell_affect.sql \
	5463_mangos_command.sql \
	5466_mangos_spell_affect.sql \
	5471_mangos_spell_affect.sql \
	5482_mangos_spell_affect.sql \
	5491_mangos_player_levelstats.sql \
	5492_mangos_player_levelstats.sql \
	5498_mangos_spell_affect.sql \
	5505_mangos.sql \
	5505_mangos_npc_gossip.sql \
	5526_mangos_player_levelstats.sql \
	5529_mangos_spell_chain.sql \
	5530_mangos_spell_learn_spell.sql \
	5531_mangos_creature_movement.sql \
	5534_mangos_player_levelstats.sql \
	5541_mangos_command.sql \
	5541_mangos_mangos_string.sql \
	5547_characters_character_ticket.sql \
	5547_mangos_mangos_string.sql \
	5554_mangos_locales_creature.sql \
	5558_mangos_player_levelstats.sql \
	5570_mangos_spell_elixir.sql \
	5571_mangos_player_levelstats.sql \
	5576_mangos_spell_affect.sql \
	5576_mangos_spell_proc_event.sql \
	5585_mangos_gameobject_template.sql \
	5585_mangos_locales_gameobject.sql \
	5586_mangos_spell_proc_event.sql \
	5589_mangos_spell_proc_event.sql \
	5593_mangos_spell_proc_event.sql \
	5628_mangos_creature_movement.sql \
	5632_characters.sql \
	5634_mangos_mangos_string.sql \
	5636_mangos_loot_template.sql \
	5640_mangos_spell_proc_event.sql \
	5642_mangos_mangos_string.sql \
	5651_characters_guild_bank_tab.sql \
	5651_characters_characters.sql \
	5651_characters_character_social.sql \
	5651_mangos_creature_template.sql \
	5655_mangos_spell_affect.sql \
	5655_mangos_spell_chain.sql \
	5655_mangos_spell_proc_event.sql \
	5659_mangos_loot_template.sql \
	5660_mangos_spell_elixir.sql \
	5664_mangos.sql \
	5665_mangos_creature_template.sql \
	5679_mangos_creature_template.sql \
	5680_mangos_spell_proc_event.sql \
	5698_mangos_item_template.sql \
	5708_mangos_player_levelstats.sql \
	5711_characters_character_kill.sql \
	5711_mangos_command.sql \
	5714_mangos_command.sql \
	5714_mangos_mangos_string.sql \
	5718_mangos_command.sql \
	5718_mangos_creature_template.sql \
	5718_mangos_mangos_string.sql \
	5720_mangos_command.sql \
	5720_mangos_mangos_string.sql \
	5721_mangos_spell_affect.sql \
	5733_mangos_creature.sql \
	5739_mangos_creature.sql \
	5739_mangos_gameobject.sql \
	5746_mangos_quest_template.sql \
	5753_mangos_areatrigger_teleport.sql \
	5758_mangos_creature_addon.sql \
	5759_mangos_command.sql \
	5764_characters_characters.sql \
	5764_mangos_command.sql \
	5771_mangos_spell_learn_spell.sql \
	5772_mangos_command.sql \
	5773_mangos_spell_affect.sql \
	5773_mangos_spell_learn_spell.sql \
	5774_mangos_command.sql \
	5774_mangos_mangos_string.sql \
	5777_mangos_command.sql \
	README

## Additional files to include when running 'make dist'
#  SQL update files, to upgrade database schema from older revisions
EXTRA_DIST = \
	4846_characters.sql \
	4846_mangos_creature_template.sql \
	4846_mangos_item_template.sql \
	4846_mangos_npc_option.sql \
	4875_mangos_quest_template.sql \
	4890_mangos_item_template.sql \
	4895_mangos_command.sql \
	4896_characters_mail.sql \
	4898_mangos_playercreateinfo_item.sql \
	4904_mangos_item_template.sql \
	4908_mangos_spell_proc_event.sql \
	4916_mangos_spell_affect.sql \
	4921_mangos_gameobject.sql \
	4926_mangos_spell_proc_event.sql \
	4937_mangos_spell_affect.sql \
	4937_mangos_spell_proc_event.sql \
	4948_mangos_spell_affect.sql \
	4951_mangos_spell_affect.sql \
	4952_mangos_spell_proc_event.sql \
	4971_characters_character_social.sql \
	4975_mangos_spell_affect.sql \
	4975_mangos_spell_proc_event.sql \
	4984_mangos_spell_proc_event.sql \
	5019_mangos_spell_proc_event.sql \
	5030_mangos_item_template.sql \
	5036_mangos_spell_affect.sql \
	5039_mangos_spell_proc_event.sql \
	5064_mangos_spell_proc_event.sql \
	5070_mangos_spell_proc_event.sql \
	5072_mangos_spell_proc_event.sql \
	5075_mangos_spell_proc_event.sql \
	5084_mangos_command.sql \
	5085_mangos_spell_affect.sql \
	5087_mangos_spell_affect.sql \
	5088_mangos_spell_proc_event.sql \
	5092_mangos_item_template.sql \
	5097_mangos_skill_extra_item_template.sql \
	5106_mangos_spell_chain.sql \
	5108_characters.sql \
	5119_mangos_quest_template.sql \
	5120_mangos_spell_chain.sql \
	5121_mangos_spell_affect.sql \
	5123_mangos_spell_proc_event.sql \
	5128_mangos_spell_proc_event.sql \
	5130_mangos_spell_proc_event.sql \
	5146_mangos_spell_proc_event.sql \
	5147_mangos_spell_learn_spell.sql \
	5156_mangos_spell_affect.sql \
	5156_mangos_spell_proc_event.sql \
	5158_mangos_spell_affect.sql \
	5159_characters_guild_bank_eventlog.sql \
	5159_characters_guild_bank_item.sql \
	5159_characters_guild_bank_right.sql \
	5159_characters_guild_bank_tab.sql \
	5159_characters_guild_memeber.sql \
	5160_mangos_command.sql \
	5163_mangos_spell_affect.sql \
	5163_mangos_spell_proc_event.sql \
	5164_mangos_creature_movement.sql \
	5165_mangos_mangos_string.sql \
	5166_mangos_mangos_string.sql \
	5172_mangos_mangos_string.sql \
	5180_mangos_spell_affect.sql \
	5181_mangos_mangos_string.sql \
	5185_mangos_spell_proc_event.sql \
	5191_mangos_spell_threat.sql \
	5197_mangos_spell_affect.sql \
	5199_characters_guild_bank_eventlog.sql \
	5201_mangos_spell_affect.sql \
	5212_mangos_command.sql \
	5212_mangos_mangos_string.sql \
	5217_characters_character.sql \
	5228_mangos_gameobject_scripts.sql \
	5233_mangos_event_scripts.sql \
	5234_mangos_spell_proc_event.sql \
	5238_mangos_spell_proc_event.sql \
	5242_mangos_instance_template.sql \
	5243_mangos_spell_affect.sql \
	5249_mangos_spell_learn_skill.sql \
	5254_mangos_spell_affect.sql \
	5254_mangos_spell_proc_event.sql \
	5258_characters_character.sql \
	5265_mangos_spell_proc_event.sql \
	5269_mangos_uptime.sql \
	5270_mangos_gameobject_scripts.sql \
	5272_mangos_mangos_string.sql \
	5286_characters_character_pet.sql \
	5292_mangos_spell_proc_event.sql \
	5295_mangos_creature_template.sql \
	5297_characters.sql \
	5297_mangos.sql \
	5297_realmd_account.sql \
	5302_mangos_player_levelstats.sql \
	5311_mangos_spell_affect.sql \
	5326_mangos_spell_affect.sql \
	5335_mangos_mangos_string.sql \
	5343_mangos_spell_proc_event.sql \
	5347_mangos_spell_affect.sql \
	5350_mangos_spell_affect.sql \
	5351_mangos_spell_proc_event.sql \
	5363_mangos_creature_template.sql \
	5366_mangos_spell_proc_event.sql \
	5367_mangos_spell_affect.sql \
	5370_mangos_spell_affect.sql \
	5374_mangos_spell_affect.sql \
	5378_mangos_spell_proc_event.sql \
	5379_mangos_spell_proc_event.sql \
	5402_mangos_spell_proc_event.sql \
	5408_characters_mail_items.sql \
	5411_mangos_spell_affect.sql \
	5419_mangos_spell_affect.sql \
	5420_characters_mail_items.sql \
	5422_mangos_spell_proc_event.sql \
	5441_characters_petition_petition_sign.sql \
	5443_mangos_item_template.sql \
	5445_mangos_spell_affect.sql \
	5446_mangos_creature_template.sql \
	5451_characters_petition_petition_sign.sql \
	5457_realmd_account.sql \
	5460_mangos_spell_proc_event.sql \
	5462_mangos_spell_affect.sql \
	5463_mangos_command.sql \
	5466_mangos_spell_affect.sql \
	5471_mangos_spell_affect.sql \
	5482_mangos_spell_affect.sql \
	5491_mangos_player_levelstats.sql \
	5492_mangos_player_levelstats.sql \
	5498_mangos_spell_affect.sql \
	5505_mangos.sql \
	5505_mangos_npc_gossip.sql \
	5526_mangos_player_levelstats.sql \
	5529_mangos_spell_chain.sql \
	5530_mangos_spell_learn_spell.sql \
	5531_mangos_creature_movement.sql \
	5534_mangos_player_levelstats.sql \
	5541_mangos_command.sql \
	5541_mangos_mangos_string.sql \
	5547_characters_character_ticket.sql \
	5547_mangos_mangos_string.sql \
	5554_mangos_locales_creature.sql \
	5558_mangos_player_levelstats.sql \
	5570_mangos_spell_elixir.sql \
	5571_mangos_player_levelstats.sql \
	5576_mangos_spell_affect.sql \
	5576_mangos_spell_proc_event.sql \
	5585_mangos_gameobject_template.sql \
	5585_mangos_locales_gameobject.sql \
	5586_mangos_spell_proc_event.sql \
	5589_mangos_spell_proc_event.sql \
	5593_mangos_spell_proc_event.sql \
	5628_mangos_creature_movement.sql \
	5632_characters.sql \
	5634_mangos_mangos_string.sql \
	5636_mangos_loot_template.sql \
	5640_mangos_spell_proc_event.sql \
	5642_mangos_mangos_string.sql \
	5651_characters_guild_bank_tab.sql \
	5651_characters_characters.sql \
	5651_characters_character_social.sql \
	5651_mangos_creature_template.sql \
	5655_mangos_spell_affect.sql \
	5655_mangos_spell_chain.sql \
	5655_mangos_spell_proc_event.sql \
	5659_mangos_loot_template.sql \
	5660_mangos_spell_elixir.sql \
	5664_mangos.sql \
	5665_mangos_creature_template.sql \
	5679_mangos_creature_template.sql \
	5680_mangos_spell_proc_event.sql \
	5698_mangos_item_template.sql \
	5708_mangos_player_levelstats.sql \
	5711_characters_character_kill.sql \
	5711_mangos_command.sql \
	5714_mangos_command.sql \
	5714_mangos_mangos_string.sql \
	5718_mangos_command.sql \
	5718_mangos_creature_template.sql \
	5718_mangos_mangos_string.sql \
	5720_mangos_command.sql \
	5720_mangos_mangos_string.sql \
	5721_mangos_spell_affect.sql \
	5733_mangos_creature.sql \
	5739_mangos_creature.sql \
	5739_mangos_gameobject.sql \
	5746_mangos_quest_template.sql \
	5753_mangos_areatrigger_teleport.sql \
	5758_mangos_creature_addon.sql \
	5759_mangos_command.sql \
	5764_characters_characters.sql \
	5764_mangos_command.sql \
	5771_mangos_spell_learn_spell.sql \
	5772_mangos_command.sql \
	5773_mangos_spell_affect.sql \
	5773_mangos_spell_learn_spell.sql \
	5774_mangos_command.sql \
	5774_mangos_mangos_string.sql \
	5777_mangos_command.sql \
	README
