# Copyright (C) 2005 MaNGOS <http://www.mangosproject.org/>
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA

INCLUDES += -I$(srcdir) -I$(srcdir)/../../dep/include  -I$(srcdir)/../shared -I$(srcdir)/../framework

noinst_LIBRARIES = libgame.a

libgame_a_SOURCES = \
	AggressorAI.cpp \
	AuctionHouse.cpp \
	Bag.cpp \
	Base.cpp \
	Channel.cpp \
	ChannelHandler.cpp \
	CharacterHandler.cpp \
	Chat.cpp \
	ChatHandler.cpp \
	CombatHandler.cpp \
	Container.cpp \
	Corpse.cpp \
	CreatureAI.cpp \
	CreatureAIRegistry.cpp \
	CreatureAISelector.cpp \
	Creature.cpp \
	debugcmds.cpp \
	DestinationHolder.cpp \
	DuelHandler.cpp \
	DynamicObject.cpp \
	EventSystem.cpp \
	FlightMaster.cpp \
	GameObject.cpp \
	GossipDef.cpp \
	GridNotifiers.cpp \
	GridStates.cpp \
	Group.cpp \
	GroupHandler.cpp \
	GuardAI.cpp \
	Guild.cpp \
	GuildHandler.cpp \
	IdleMovementGenerator.cpp \
	Item.cpp \
	ItemHandler.cpp \
	Level0.cpp \
	Level1.cpp \
	Level2.cpp \
	Level3.cpp \
	LootMgr.cpp \
	Mail.cpp \
	Map.cpp \
	MapManager.cpp \
	MiscHandler.cpp \
	MotionMaster.cpp \
	MovementGenerator.cpp \
	MovementHandler.cpp \
	Mthread.cpp \
	NPCHandler.cpp \
	NullCreatureAI.cpp \
	ObjectAccessor.cpp \
	Object.cpp \
	ObjectGridLoader.cpp \
	ObjectMgr.cpp \
	Opcodes.cpp \
	PetHandler.cpp \
	PetHandler.cpp \
	Player.cpp \
	QueryHandler.cpp \
	QuestDef.cpp \
	QuestHandler.cpp \
	RandomMovementGenerator.cpp \
	ReactorAI.cpp \
	RedZoneDistrict.cpp \
	ScriptCalls.cpp \
	SkillHandler.cpp \
	Spell.cpp \
	SpellEffects.cpp \
	SpellAuras.cpp \
	SpellHandler.cpp \
	TargetedMovementGenerator.cpp \
	TaxiHandler.cpp \
	TaxiMovementGenerator.cpp \
	TradeHandler.cpp \
	Unit.cpp \
	UpdateData.cpp \
	WaypointMovementGenerator.cpp \
	World.cpp \
	WorldLog.cpp \
	WorldSession.cpp \
	WorldSocket.cpp \
	WorldSocketMgr.cpp \
	AggressorAI.h \
	AnimalRandomMovementGenerator.h \
	Bag.h \
	Base.h \
	Cell.h \
	CellImpl.h \
	Channel.h \
	ChannelMgr.h \
	Chat.h \
	Container.h \
	Corpse.h \
	CreatureAI.h \
	CreatureAIImpl.h \
	CreatureAIRegistry.h \
	CreatureAISelector.h \
	Creature.h \
	DynamicObject.h \
	EventSystem.h \
	FactionTemplateResolver.h \
	GameObject.h \
	GossipDef.h \
	GridDefines.h \
	GridNotifiers.h \
	GridNotifiersImpl.h \
	GridStates.h \
	Group.h \
	GuardAI.h \
	Guild.h \
	HateMatrix.h \
	IdleMovementGenerator.h \
	Item.h \
	ItemPrototype.h \
	LootMgr.h \
	Mail.h \
	Map.h \
	MapManager.h \
	MiscHandler.h \
	MotionMaster.h \
	MovementGenerator.h \
	Mthread.h \
	NameTables.h \
	NPCHandler.h \
	NullCreatureAI.h \
	ObjectAccessor.h \
	ObjectGridLoader.h \
	Object.h \
	ObjectMgr.h \
	Opcodes.h \
	Path.h \
	Player.h \
	QuestDef.h \
	RandomMovementGenerator.h \
	ReactorAI.h \
	RedZoneDistrict.h \
	ScriptCalls.h \
	SharedDefines.h \
	Spell.h \
	SpellAuras.h \
	Stats.h \
	TargetedMovementGenerator.h \
	TaxiMovementGenerator.h \
	Unit.h \
	UpdateData.h \
	UpdateFields.h \
	UpdateMask.h \
	Utilities.h \
	World.h \
	WorldSession.h \
	WorldSocket.h \
	WorldSocketMgr.h
